--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ main {
 
 .movie {
     width: 300px;
+    /* height: 300px; */
     margin: 1rem;
     background-color: var(--secondary-color);
     box-shadow: 0 4px 5px rgba(0, 0, 0, 0.2);
@@ -57,13 +58,14 @@ main {
     border-radius: 3px;
 }
 .movie img{
-    color: #eee;
-    display: flex;
+    width: 100%;
+    /* color: #eee; */
+    /* display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 0.2rem;
     padding: 0.5rem 1rem 1rem;
-    letter-spacing: 0.5rem;
+    letter-spacing: 0.5rem; */
 }
 .movie-info h3{
     margin-top: 0;
